Initial commit of the gitified scripts - they still need testing and work.